--- a/tamplate-frontend/kingHotel/room-list-details.html
+++ b/tamplate-frontend/kingHotel/room-list-details.html
@@ -245,19 +245,19 @@
                         <!--/comment-area-->
 
                         <div class="comment-form contact-form">
-                            <h4 class="contact-title color-33 pb-50">Để lại 1 bình luận</h4>
+                            <h4 class="contact-title color-33 pb-50">Để lại bình luận của bạn</h4>
                             <div class="abform-area clearfix">
                                 <form action="#" method="post">
                                     <div class="abinput-group name float-left">
-                                        <input type="text" name="name" placeholder="Name">
+                                        <input type="text" name="name" placeholder="Tên...">
                                     </div>
 
                                     <div class="abinput-group email float-left">
-                                        <input type="email" name="email" placeholder="Email">
+                                        <input type="email" name="email" placeholder="Email...">
                                     </div>
 
                                     <div class="abinput-group msg">
-                                        <textarea name="msg" placeholder="Message"></textarea>
+                                        <textarea name="msg" placeholder="Nhận xét ..."></textarea>
                                     </div>
                                     <button type="submit" class="pos-relative btn-default solid-bg-btn"><span>Gửi đi</span></button>
                                 </form>
