--- a/tamplate-frontend/kingHotel/index.html
+++ b/tamplate-frontend/kingHotel/index.html
@@ -588,7 +588,7 @@
 
                         <div class="col-xl-4 offset-xl-2 col-md-5">
                             <div class="single-widget widget1 text-center">
-                                <img src="images/logo-black-v3.png" class="footer-logo" alt="footer-logo">
+                                <img src="images/logo.png" class="footer-logo" alt="footer-logo">
                                 <ul class="social-connect display-inline">
                                     <li><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                                     </li>
