--- a/tamplate-frontend/kingHotel/room-list.html
+++ b/tamplate-frontend/kingHotel/room-list.html
@@ -315,7 +315,7 @@
             </div>
         </footer>
 
-        <section class="main-footer">
+        <!-- <section class="main-footer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 order-2 order-lg-1">
@@ -331,7 +331,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </div>
     <!-- ======================================= 
         ==End footer section==  
