--- a/tamplate-frontend/kingHotel/room-list-details.html
+++ b/tamplate-frontend/kingHotel/room-list-details.html
@@ -232,18 +232,17 @@
                             <ul class="comment-wrapper pt-45">
                                 <li>
                                     <img src="images/commenter-img1.jpg" alt="author img">
-                                    <h6><span><a href="#" class="name">Kavin smith </a> - CEO CHI ART PRO</span> <a href="#" class="reply">REPLY</a></h6>
+                                    <h6><span><a href="#" class="name">Kavin smith </a> - CEO CHI ART PRO</span></h6>
                                     <p>Vestibulum imperdiet nibh vel magna lacinia ultrices. Sed id interdum urna. Nam ac elit a ante commodo tristique. Duis lacus urna, condimentum a vehiculaa,Duis lacus </p>
                                 </li>
                                 <li>
                                     <img src="images/commenter-img2.jpg" alt="author img">
-                                    <h6><span><a href="#" class="name">Kavin smith </a> - CEO CHI ART PRO</span> <a href="#" class="reply">REPLY</a></h6>
+                                    <h6><span><a href="#" class="name">Kavin smith </a> - CEO CHI ART PRO</span></h6>
                                     <p>Vestibulum imperdiet nibh vel magna lacinia ultrices. Sed id interdum urna. Nam ac elit a ante commodo tristique. Duis lacus urna, condimentum a vehiculaa,Duis lacus </p>
                                 </li>
                             </ul>
                         </div>
                         <!--/comment-area-->
-
                         <div class="comment-form contact-form">
                             <h4 class="contact-title color-33 pb-50">Để lại bình luận của bạn</h4>
                             <div class="abform-area clearfix">
@@ -251,11 +250,9 @@
                                     <div class="abinput-group name float-left">
                                         <input type="text" name="name" placeholder="Tên...">
                                     </div>
-
                                     <div class="abinput-group email float-left">
                                         <input type="email" name="email" placeholder="Email...">
                                     </div>
-
                                     <div class="abinput-group msg">
                                         <textarea name="msg" placeholder="Nhận xét ..."></textarea>
                                     </div>
